--- a/index.html
+++ b/index.html
@@ -7,6 +7,41 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <main>
+        <div>
+
+            <div class="results">
+
+                <div>
+                    <span>
+                        <img src="./imagens/pedra.png" alt="escolha do usuário">
+                    </span>
+                    <span>
+                        <img src="./imagens/pedra.png" alt="escolha do computador">
+                    </span>
+                </div>
+                <p>Bora Jogar?</p>
+
+            </div>
+
+            <div class="options">
+
+                <span>
+                    <img src="imagens/pedra.png" alt="Imagem Pedra">
+                    <p>Pedra</p>
+                </span>
+                <span>
+                    <img src="imagens/papel.png.png" alt="Imagem Papel">
+                    <p>Papel</p>
+                </span>
+                <span>
+                    <img src="imagens/tesoura.png.png" alt="Imagem Tesoura">
+                    <p>Tesoura</p>
+                </span>
+
+            </div>
+        </div>
+    </main>
     
     <script src="script.js"></script>
 </body>
