--- a/index.html
+++ b/index.html
@@ -7,40 +7,39 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
-        <div>
+    <main class="container">
 
             <div class="results">
 
                 <div>
-                    <span>
+                    <span class="user-result">
                         <img src="./imagens/pedra.png" alt="escolha do usuário">
                     </span>
-                    <span>
+                    <span class="computer-result">
                         <img src="./imagens/pedra.png" alt="escolha do computador">
                     </span>
                 </div>
-                <p>Bora Jogar?</p>
+                <p class="result-text">Bora Jogar?</p>
 
             </div>
 
             <div class="options">
 
-                <span>
+                <span class="option-image">
                     <img src="imagens/pedra.png" alt="Imagem Pedra">
                     <p>Pedra</p>
                 </span>
-                <span>
-                    <img src="imagens/papel.png.png" alt="Imagem Papel">
+                <span class="option-image">
+                    <img src="imagens/papel.png" alt="Imagem Papel">
                     <p>Papel</p>
                 </span>
-                <span>
-                    <img src="imagens/tesoura.png.png" alt="Imagem Tesoura">
+                <span class="option-image">
+                    <img src="imagens/tesoura.png" alt="Imagem Tesoura">
                     <p>Tesoura</p>
                 </span>
 
             </div>
-        </div>
+        
     </main>
     
     <script src="script.js"></script>
