--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aplicação Animada</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <main class="container">
@@ -19,22 +22,22 @@
                         <img src="./imagens/pedra.png" alt="escolha do computador">
                     </span>
                 </div>
-                <p class="result-text">Bora Jogar?</p>
+                <p class="result-text">Vamos Jogar ?</p>
 
             </div>
 
             <div class="options">
 
                 <span class="option-image">
-                    <img src="imagens/pedra.png" alt="Imagem Pedra">
+                    <img src="./imagens/pedra.png" alt="Imagem Pedra">
                     <p>Pedra</p>
                 </span>
                 <span class="option-image">
-                    <img src="imagens/papel.png" alt="Imagem Papel">
+                    <img src="./imagens/papel.png" alt="Imagem Papel">
                     <p>Papel</p>
                 </span>
                 <span class="option-image">
-                    <img src="imagens/tesoura.png" alt="Imagem Tesoura">
+                    <img src="./imagens/tesoura.png" alt="Imagem Tesoura">
                     <p>Tesoura</p>
                 </span>
 
